adding timer code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="high-scores">
         <button id="high-scores">View Highscores</button>
       </div>
+      <div class="time"></div>
     </header>
 
     <div class="main-container"></div>
