adding html elements dynamically in js

--- a/index.html
+++ b/index.html
@@ -16,28 +16,29 @@
       <div class="time"></div>
     </header>
 
-    <div class="main-container"></div>
-    <h1>Coding Quiz Challenge</h1>
-    <div class="quiz-intro">
-      Answer the following Javascript questions within the time limit. Incorrect
-      answers will penalize your time by 10seconds. <br />Press Start Quiz to
-      start! <br />
-      <button id="start-quiz">Start Quiz</button>
+    <div class="main-container">
+      <h1>Coding Quiz Challenge</h1>
+      <div class="quiz-intro">
+        Answer the following Javascript questions within the time limit.
+        Incorrect answers will penalize your time by 10seconds. <br />Press
+        Start Quiz to start! <br />
+        <button id="start-quiz">Start Quiz</button>
+      </div>
     </div>
 
-    <div id="question-body">
+    <!-- <div id="question-body">
       <div class="question-header">
         What are the different data types present in Javascript?
         <br />
         <div class="radio-main">
           <div class="radio-sub">
-            <label>
+            <label id= "first-label">
               <input
                 type="radio"
                 name=" What are the different data types present in javascript? "
                 id="q1"
                 value="String"
-              />String<br />
+              /><br />
             </label>
           </div>
           <div class="radio-sub">
@@ -72,7 +73,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <script src="assets/js/script.js"></script>
   </body>
