--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       </div>
     </div>
 
+    <div>
+      <button id="next-question">Next Question</button>
+    </div>
+
     <script src="assets/js/script.js"></script>
   </body>
 </html>
