--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
       <button id="next-question">Next Question</button>
     </div>
 
+    <div id="score-page">
+      <div id="total-score"></div>
+      <label>Submit Initials:</label>
+      <input type="text" id="initial" />
+      <button id="submit-initials">Submit Initials</button>
+    </div>
+
     <script src="assets/js/script.js"></script>
   </body>
 </html>
