adding local storage code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
       <div id="total-score"></div>
       <label>Submit Initials:</label>
       <input type="text" id="initial" />
-      <button id="submit-initials">Submit Initials</button>
+      <button id="submit-initials" value="Send Initials">
+        Submit Initials
+      </button>
+    </div>
+
+    <div id="high-score">
+      <div id="name">Name:</div>
+
+      <div id="score">Score:</div>
     </div>
 
     <script src="assets/js/script.js"></script>
