add restart and clear scores buttons

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       <div id="score">Score:</div>
     </div>
 
+    <div id="result">
+      <button id="restart">Restart Quiz</button>
+      <button id="clear">Clear Score</button>
+    </div>
+
     <script src="assets/js/script.js"></script>
   </body>
 </html>
